[FIX] Clip main container instead of using overflow hidden

--- a/pandora-client-web/src/components/dialog/dialog.scss
+++ b/pandora-client-web/src/components/dialog/dialog.scss
@@ -36,7 +36,7 @@
 	position: absolute;
 	inset: 0;
 	margin: 0;
-	overflow: hidden;
+	overflow: clip;
 
 	pointer-events: none;
 
